  DefaultEntityEditModel.getModifiedObserver() no longer final
  Entity.getModifiedState() renamed to getModifiedObserver() for consistency
0.9.1
  Entity.isNull() only returns null if all primary key values are null, so primary keys can now contain null values
  Util.collate() problematic wildcard removed
  logback and slf4j latest versions used
  logback-core added as compile time dependency
  EntityPanelProvider.equals() improved, now takes the underlying EntityModel class into account
  EntityEditModel.getEntityNewObserver() added
  DefaultEntityEditModel.isEntityNew() is no longer final
  EntityEditPanel, update and delete actions enabled states now depend on the entityNewObserver provided by the underlying edit model
  EntityPanel, bug fixed, navigation was broken when it came to detail panels, always selected first available panel
  EntityPanel, navigation and panel state constants changed to enums
  EntityEditPanel, confirm type constants changed to enum
  EntityApplicationPanel, now saves preferences for support panels on dialog close
  EntityEditModel.UpdateEvent now contains the updated entities mapped to their respective original primary keys
  DefaultEntityTableModel, uses the above information to refresh the relevant rows after an update has been performed
  EntityPanel.setActiveDetailPanel() bug fixed, introduced in the navigation bug fix above, selecting a detail panel by tab did not work anymore
  DefaultEntityEditModel.delete() bug fixed, now uses getEntity().getOriginalCopy() so that any non-persistent changes to the primary key do not interfere with the delete
  ServerMonitor, connection history tab added
  ServerMonitor, the above improved a bit
  FilteredTablePanel.SortableHeaderRenderer bug fixed, now aligns the text correctly when sorting icon is visible
  ServerMonitor, ClientInstanceMonitorPanel, log JTextArea no longer editable