@@ -3825,3 +3825,4 @@
   ServerMonitor, the above improved a bit
   FilteredTablePanel.SortableHeaderRenderer bug fixed, now aligns the text correctly when sorting icon is visible
   ServerMonitor, ClientInstanceMonitorPanel, log JTextArea no longer editable
+  EntityUtil.hashByPropertyValue() map key generified
